5.CKAD/5.ServicesAndNetworking/networking.yaml
# kind: NetworkingPolicy
# apiVersion: netwoking.k8s.io/v1
# metadata:
#   name: db-network
# spec:
#   podSelector:
#     matchLables:
#       role: db
#   policyTypes:
#   - ingress
#   - egress
#   ingress:
#   - from:
#     - podSelector:
#         matchLables:
#           name: api-pod
#       namespaceSelector:
#         matchLables:
#           name: prod
#     - ipBlock:
#         cidr: 192.168.5.10/32
  
#     ports:
#     - protocol: TCP
#     - port: 3306
#   egress:
#   - to:
#     - ipBlock:
#         cidr: 192.168.5.10/32
apiVersion: netwoking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - egress
  - ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: web-api
      namespaceSelector:
        matchLabels:
          name: staging
    - ipBlock:
        cidr: 23.243.443.44/32
    ports:
      - protocol: TCP
      - port: 3306
  egress:
    - to:
        - podSelector:
            matchLabels:
              name: web-api
          namespaceSelector:
            matchLabels:
              name: web-api
      ports:
        - protocol: TCP
        - port: 3306
